[gd_scene load_steps=3 format=3 uid="uid://ddohksqocyhnx"]

[ext_resource type="Theme" uid="uid://bebg8dyoq0am0" path="res://assets/themes/chart_editor.tres" id="1_3tx0p"]
[ext_resource type="Script" uid="uid://ydtsb8wn2g1u" path="res://scenes/instances/chart editor/strum_button.gd" id="2_yyjwr"]

[node name="Strum Button" type="HFlowContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -360.0
offset_right = 144.0
offset_bottom = -314.0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 3
theme = ExtResource("1_3tx0p")
script = ExtResource("2_yyjwr")

[node name="Move Lane Left" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "<"

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
autowrap_mode = 3

[node name="Move Lane Right" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = ">"

[node name="Window" type="Window" parent="."]
title = "Edit Strum Settings"
initial_position = 4
size = Vector2i(300, 180)
visible = false

[node name="VBoxContainer" type="VFlowContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(300, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Label Name:"

[node name="Strum ID" type="LineEdit" parent="Window/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Strum ID"

[node name="HBoxContainer2" type="HBoxContainer" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(300, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Window/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Vocal Track:"

[node name="Vocal Track" type="SpinBox" parent="Window/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer4" type="HBoxContainer" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(300, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="Check Box" type="CheckButton" parent="Window/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Muted:"

[node name="HSeparator" type="HSeparator" parent="Window/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Button" type="Button" parent="Window/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Save Settings"

[connection signal="pressed" from="Move Lane Left" to="." method="_on_move_lane_left_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Move Lane Right" to="." method="_on_move_lane_right_pressed"]
[connection signal="about_to_popup" from="Window" to="." method="_on_window_about_to_popup"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/VBoxContainer/HBoxContainer3/Button" to="." method="_on_save_button_pressed"]
